# test_game

./: CLAUDE.md  Cargo.toml  Session.vim  continuous_runner.ps1
.claude/: settings.local.json
.claude/rules/: art-and-render.md  debug.md  input.md  open-questions.md  platforming-feel.md  prototype-stages.md  simulation.md  stack.md  testing.md  world.md
assets/levels/: world.ldtk
src/: input.rs  main.rs
src/camera/: mod.rs
src/level/: mod.rs
src/physics/: gravity.rs  ground.rs  interpolation.rs  kinematics.rs  mod.rs
src/player/: jump.rs  mod.rs  movement.rs  render.rs  spawn.rs
