[package]
name = "test_game"
version = "0.1.0"
edition = "2024"

[features]
# Opt-in dynamic linking. Off by default because the resulting binary depends
# on hashed dylibs in `target/debug/deps/` and the toolchain `bin/`, which
# RustRover's debugger doesn't put on PATH — leading to "std-*.dll not found"
# on debug launch. The continuous test runner re-enables it for link-speed.
dev-dynamic = ["bevy/dynamic_linking"]

[dependencies]
bevy = "0.18"
avian2d = "0.6"
bevy_ecs_ldtk = "0.14"
leafwing-input-manager = "0.20"
bevy-inspector-egui = "0.36"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
